# async-reduce

./: .coveragerc  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTORS.md  DEVELOPMENT.md  LICENSE  MANIFEST.in  Makefile  README.md  TODO.md  pytest.ini  setup.cfg  setup.py  shell.nix  tox.ini  versioning.py
async_reduce/: __init__.py  async_reduceable.py  async_reducer.py  aux.py  stats.py
async_reduce/hooks/: __init__.py  base.py  debug.py  statistics.py
examples/: example_async_reduce.py  example_async_reduceable.py  example_hooks.py
tests/: test_async_reduceable.py  test_async_reducer.py  test_aux_get_coroutine_function_location.py  test_stats.py
tests/test_hooks/: test_base_multiplehooks.py  test_debug.py  test_statistics_detail.py  test_statistics_overall.py
