[metadata]
name = async_reduce
# version = < see setup.py >
description = Reducer for similar simultaneously coroutines
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sirkonst/async-reduce
author = Konstantin Enchant
author_email = sirkonst@gmail.com
maintainer = Konstantin Enchant
maintainer_email = sirkonst@gmail.com
keywords = asyncio, reduce
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = >=3.7
packages = find:
install_requires =

[options.packages.find]
exclude =
    tests

[options.extras_require]
develop =
    tox
    wheel
    twine
testing =
    pytest
    pytest-asyncio
    coverage
    asynctest
    pylama
    mypy
