[metadata]
name = async_reduce
# version = < see setup.py >
description = Reducer for similar simultaneously coroutines
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sirkonst/async-reduce
author = Konstantin Enchant
author_email = sirkonst@gmail.com
maintainer = Konstantin Enchant
maintainer_email = sirkonst@gmail.com
keywords = asyncio, reduce
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[options]
python_requires = >=3.7
packages = find:
install_requires =

[options.packages.find]
exclude =
    tests

[options.extras_require]
develop =
    tox~=4.23
    wheel~=0.45
    twine~=6.0
testing =
    setuptools~=68.2; python_version>="3.12"  # needed for pylama
    pytest~=7.2
    pytest-asyncio~=0.20
    coverage~=7.0
    pylama~=8.4
    mypy~=0.991
